@@ -6,6 +6,7 @@ import java.io.UnsupportedEncodingException;
 import java.security.InvalidKeyException;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.KeySpec;
+import java.util.Base64;
 
 import javax.crypto.Cipher;
 import javax.crypto.NoSuchPaddingException;
@@ -14,8 +15,8 @@ import javax.crypto.SecretKeyFactory;
 import javax.crypto.spec.DESKeySpec;
 import javax.crypto.spec.DESedeKeySpec;
 
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
+//import sun.misc.BASE64Decoder;
+//import sun.misc.BASE64Encoder;
 
 /**
  * This class can be used to encrypt and decrypt using DES and a given key
@@ -23,7 +24,6 @@ import sun.misc.BASE64Encoder;
  * @author Javid Jamae
  * @see http://www.devx.com/Java/10MinuteSolution/21385/0/page/1
  */
-@SuppressWarnings("restriction")
 public class StringEncrypter {
 
 	public static final String DESEDE_ENCRYPTION_SCHEME = "DESede";
@@ -105,8 +105,9 @@ public class StringEncrypter {
 			byte[] cleartext = unencryptedString.getBytes( UNICODE_FORMAT );
 			byte[] ciphertext = cipher.doFinal( cleartext );
 
-			BASE64Encoder base64encoder = new BASE64Encoder();
-			return base64encoder.encode( ciphertext );
+			return Base64.getEncoder().encodeToString(ciphertext);
+//			BASE64Encoder base64encoder = new BASE64Encoder();
+//			return base64encoder.encode( ciphertext );
 		}
 		catch (Exception e)
 		{
@@ -123,8 +124,10 @@ public class StringEncrypter {
 		{
 			SecretKey key = keyFactory.generateSecret( keySpec );
 			cipher.init( Cipher.DECRYPT_MODE, key );
-			BASE64Decoder base64decoder = new BASE64Decoder();
-			byte[] cleartext = base64decoder.decodeBuffer( encryptedString );
+			byte[] cleartext = Base64.getDecoder().decode(encryptedString);
+			
+//			BASE64Decoder base64decoder = new BASE64Decoder();
+//			byte[] cleartext = base64decoder.decodeBuffer(  );
 			byte[] ciphertext = cipher.doFinal( cleartext );
 
 			return bytes2String( ciphertext );
